--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,12 +20,12 @@
       
       <div class="form-group">
         <label for="nome">Nome:</label>
-        <input type="text" class="form-control" id="nome" placeholder="Digite seu nome" name="nome">
+        <input type="text" class="form-control" id="nome" placeholder="Digite seu nome" name="nome" required>
       </div>
 
       <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
       </div>
 
       <!-- <div class="form-group">
@@ -40,7 +40,7 @@
       </div> -->
 
  </div>
-   <div class="card-footer"><button type="submit" class="btn btn-primary">. Enviar .</button></div>
+   <div class="card-footer text-center"><button type="submit" class="btn btn-primary">Entrar</button></div>
  </div>
 </form>
 </div>
