--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,17 +5,18 @@
   <title>
     <%= title %>
   </title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
+  
+  <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
 <body>
@@ -58,17 +59,17 @@
     </div>
     <hr>
     <div class="row">
-      <div class="col-12">
+      <div class="col-12" >
         <h5>Grupos</h5>
-        <table class="table table-striped">
+        <table style="display: none;" class="table table-striped">
           <thead>
             <tr>
               <th>Grupo</th>
+              <th>#</th>
               <th>Alunos</th>
             </tr>
           </thead>
-          <tbody id="usersGrupos">
-          </tbody>
+          <tbody id="usersGrupos"></tbody>
         </table>
 
       </div>
@@ -153,7 +154,7 @@
                             <p class="mb-1"><b>Respostas</b>: [${votes}]</p>
                             <p class="mb-1">
                               <button class="btn btn-sm btn-primary" data-pergunta="${quest.id}" style="display: ${display};" ><i class="fas fa-users"></i> </button>
-                              <button class="btn btn-sm btn-danger float-right" data-pergunta="${quest.id}" ><i class="fas fa-trash"></i></button>
+                              <button class="btn btn-sm btn-danger float-right" data-pergunta="${quest.id}" title="Excluir ${quest.q}" ><i class="fas fa-trash"></i></button>
                             </p>
                           </div>`;
 
@@ -212,9 +213,12 @@
       tbody.innerHTML = "";
 
       for (let i = 0; i < grupos.length; i++) {
-        let grupoNames = grupos[i].map(u => u.name).join(', ');
-        tbody.innerHTML += `<tr><td>${i+1}</td> <td> <i class="fas fa-users c-green"></i> ${grupoNames}</td></tr>`;
+        let grupoNames = grupos[i].map(u => u.name.trim()).join(' | ');
+        let len = grupos[i].length;
+        tbody.innerHTML += `<tr><td>${i+1}</td> <td>${len}</td> <td> ${grupoNames} <i class="fas fa-users c-green float-right" ></i> </td></tr>`;
       }
+
+      tbody.closest('table').style.display = 'table';
 
     });
 
@@ -277,9 +281,8 @@
         }
       });
     });
-
-
   </script>
+
 
 </body>
 
