--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,20 +2,30 @@
 <html lang="en">
 <head>
   <title><%= title %></title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+
+  <style>
+    body{
+      background-color: rgba(0, 0, 255, 0.555);
+    }
+    .card {
+      border-radius: 10px;
+      box-shadow: 3px 3px #535353;
+    }
+  </style>
 </head>
 <body>
 
 <div class="container">
   <form method="GET" action="/user/">
    <div class="card">
-    <div class="card-header"><h2>Login Form</h2></div>
+    <div class="card-header text-center"><h2>MyEnquete Login</h2></div>
     <div class="card-body">
       
       <div class="form-group">
