--- a/views/user.ejs
+++ b/views/user.ejs
@@ -5,17 +5,18 @@
   <title>
     <%= title %>
   </title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+
 </head>
 
 <body>
@@ -116,7 +117,7 @@
       q.options.forEach(o => {
         opt += `<button class="btn btn-sm btn-success" data-pergunta="${q.id}" >${o.i}</button> `;
       });
-      li.innerHTML = `${q.q} <br> ${opt}`;
+      li.innerHTML = `<h4>${q.q}</h4> ${opt}`;
       output.appendChild(li);
 
       document.querySelectorAll(`li > button[data-pergunta="${q.id}"]`).forEach(el => {
